--- a/Vizvezetek.API/appsettings.json
+++ b/Vizvezetek.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "server=localhost;user=root;database=vizvezetek"
+  }
+
 }
